@@ -1,5 +1,12 @@
 body {
     font-family: sans-serif;
+    font-size: 10pt;
+    margin: 0px;
+    padding: 0px;
+}
+
+* {
+	box-sizing: border-box;
 }
 
 #txt {
@@ -10,4 +17,78 @@ body {
 
 #err {
     color: maroon;
+}
+
+.doc {
+	color: #888;
+}
+
+.top > td {
+	vertical-align: top;
+}
+
+.add, .del {
+	width: 20px;
+	height: 21px;
+	margin-right: 3px;
+	background: url(cmdargs.png);
+	cursor: pointer;
+}
+.del {
+	background-position: -20px 0px;
+}
+
+.entries {
+	border-spacing: 0px;
+}
+
+.main input {width: 100%; height: 100%;}
+
+.left {
+	overflow:auto;
+	position:fixed;
+	top:0px;
+	width:150px;
+	bottom:100px
+}
+.left > div {
+	margin-left: -8px;
+}
+
+.main {
+	overflow:auto;
+	position:fixed;
+	left:150px;
+	right:0px;
+	top:0px;
+	bottom:100px;
+}
+
+.bottom {
+	overflow:auto;
+	position:fixed;
+	bottom:0px;
+	height:100px;
+	width:100%;
+	padding: 10px;
+	background: #eee;
+	border-top: 1px solid #bbb;
+}
+
+.left b {display: block; padding-left: 12px;}
+.group {padding-left: 10px;}
+
+.link {
+	border: 1px solid #eee;
+	border-right-width: 0px;
+	padding-left: 2px;
+	cursor: pointer;
+}
+.active {
+	border: 1px solid #bbb;
+	border-right-width: 0px;
+	background-color: white;
+}
+.left {
+	background-color: #eee;
 }
